# stockControler

TP Final 2022/: CMakeLists.txt  TPFINALmenu.cbp  TPFINALmenu.cscope_file_list  TPFINALmenu.depend  TPFINALmenu.layout  archivos.c  archivos.h  compra.c  compra.h  empleado.c  empleado.h  estructuras.c  estructuras.h  main.c  menus.c  menus.h  pila.h  producto.c  producto.h  usuarios.c  usuarios.h
